--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,7 @@
                       <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
-                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="./my_works.html">мои работы</a>
+                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/portfolio_pages/my_works.html">мои работы</a>
                     <svg class="svg_dash">
                       <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
@@ -74,7 +74,7 @@
                       <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
-                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="./blog.html">блог</a>
+                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/portfolio_pages/blog.html">блог</a>
                     <svg class="svg_dash">
                       <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
@@ -86,7 +86,7 @@
                       <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
-                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="./about.html">обо мне</a>
+                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/portfolio_pages/about.html">обо мне</a>
                     <svg class="svg_dash">
                       <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
@@ -98,7 +98,7 @@
                       <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
-                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="./login.html">авторизация</a>
+                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/portfolio_pages/login.html">авторизация</a>
                     <svg class="svg_dash">
                       <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
@@ -191,10 +191,10 @@
                 <div class="l-container">
                   <div class="l-footer__nav">
                     <ul class="c-nav__list">
-                      <li class="c-nav__item"><a class="c-nav__link" href="./my_works.html">мои работы</a></li>
-                      <li class="c-nav__item"><a class="c-nav__link" href="./blog.html">блог</a></li>
-                      <li class="c-nav__item"><a class="c-nav__link" href="./about.html">обо мне</a></li>
-                      <li class="c-nav__item"><a class="c-nav__link" href="./login.html">авторизация</a></li>
+                      <li class="c-nav__item"><a class="c-nav__link" href="/portfolio_pages/my_works.html">мои работы</a></li>
+                      <li class="c-nav__item"><a class="c-nav__link" href="/portfolio_pages/blog.html">блог</a></li>
+                      <li class="c-nav__item"><a class="c-nav__link" href="/portfolio_pages/about.html">обо мне</a></li>
+                      <li class="c-nav__item"><a class="c-nav__link" href="/portfolio_pages/login.html">авторизация</a></li>
                     </ul>
                   </div>
                   <div class="l-footer__text"><span>Я веб-разработчик из Санкт-Петербурга, и этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool.</span></div>
